# rely

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  mkdocs.yml  pyproject.toml
.github/workflows/: check_types.yml  ci.yml  format.yml  test.yml
docs/: index.md  reference.md
rely/: cli.py  metrics.py
rely/api/: __init__.py
rely/clients/: github_api_client.py  http_client.py
rely/clients/models/: content_tree.py  content_tree_list.py  full_repository.py  full_repository_schema.json
rely/config/: constants.py  settings.py
rely/core/metrics/: base_metric.py  fork_count_metric.py  has_description_metric.py  has_license_metric.py  has_readme_metric.py  is_archived_metric.py  is_disabled_metric.py  last_commit_metric.py  metric.py  metric_reducer.py  open_issue_count_metric.py  star_count_metric.py  types.py  watcher_count_metric.py
rely/core/models/: repo_context.py  repo_identifier.py
rely/services/: score_repo_service.py
scripts/: run_build_docs.sh  run_linter_check.sh  run_linter_fix.sh  run_streamlit_app.sh  run_test_coverage.sh  run_tests.sh  run_type_checker.sh
tests/: conftest.py
tests/clients/: test_http_client.py
tests/clients/test_github_api_client/: test_github_api_client.py
tests/clients/test_github_api_client/fixtures/: get_repo_contents_response.json  get_repo_response.json
tests/core/metrics/test_has_description_metric/: test_has_description_metric.py
tests/core/metrics/test_has_license_metric/: test_has_license_metric.py
tests/core/models/: test_repo_context.py  test_repo_identifier.py
(+6 files in other folders)
